# PySQLRecon

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pysqlrecon/: __main__.py  logger.py
pysqlrecon/lib/: __init__.py  clr.py  exceptions.py  module.py  query.py  sccm.py  sqlagent.py
pysqlrecon/modules/: __init__.py  adsi.py  agentcmd.py  agentstatus.py  checkrpc.py  clr.py  columns.py  databases.py  disableclr.py  disableole.py  disablerpc.py  disablexp.py  enableclr.py  enableole.py  enablerpc.py  enablexp.py  impersonate.py  info.py  links.py  olecmd.py  query.py  rows.py  sample.py  search.py  smb.py  tables.py  users.py  whoami.py  xpcmd.py
pysqlrecon/modules/sccm/: __init__.py  addadmin.py  credentials.py  logons.py  removeadmin.py  sites.py  taskdata.py  tasklist.py  users.py
resources/command_template/: README.md  command.py
resources/dotnet/: CreateProcess.cs  README.md
