[project]
name = "pysqlrecon"
version = "0.3.1"
description = "Offensive MSSQL Python toolkit"
authors = [{ name = "Matt Creel", email = "mcreel31@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "rich>=12.5.1,<13",
    "typer>=0.6.1,<0.7",
    "impacket>=0.11.0,<0.12",
    "pycryptodome>=3.20.0,<4",
]

[project.urls]
Homepage = "https://github.com/tw1sm/pysqlrecon"
Repository = "https://github.com/tw1sm/pysqlrecon"

[project.scripts]
pysqlrecon = "pysqlrecon.__main__:app"

[dependency-groups]
dev = [
    "ruff>=0.0.235,<0.0.236",
    "pytest>=7.2.1,<8",
    "pre-commit>=3.0.1,<4",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
ignore = ["E501"]
